added joi & displayed chart

--- a/static/index.html
+++ b/static/index.html
@@ -64,7 +64,7 @@
 <div class="form-container">
     <form class="form">
         <input id="findPlaylist" type="text" class="input" placeholder="search for playlist"/>
-        <button id="findPlaylistSubmit">create</button>
+        <button id="findPlaylistSubmit">search</button>
         
     </form>
 
